--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stripe/react-stripe-js": "^3.1.1",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
