--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^4.0.7"
   },
