--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,12 @@
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
