--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
