--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "stripe": "^17.7.0"
   }
