--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
-    "stripe": "^17.7.0"
+    "stripe": "^17.7.0",
+    "xtend": "^4.0.2"
   }
 }
